# internal/models/release.go
@@ -13,6 +13,7 @@ type Release struct {
 	DescriptionEN      *string   `db:"description_en"       json:"description_en,omitempty"`
 	DescriptionIT      *string   `db:"description_it"       json:"description_it,omitempty"`
 	IsCritical         bool      `db:"is_critical"          json:"is_critical"`
+	CriticalVersion    *string   `db:"critical_version"     json:"critical_version,omitempty"`
 	MinRequiredVersion *string   `db:"min_required_version" json:"min_required_version,omitempty"`
 	ReleasedAt         time.Time `db:"released_at"          json:"released_at"`
 	CreatedAt          time.Time `db:"created_at"           json:"created_at"`
@@ -24,6 +25,7 @@ type UpdateManifest struct {
 	StableDownload       string                  `json:"stableDownload"`
 	BetaDownload         string                  `json:"betaDownload,omitempty"`
 	IsCritical           bool                    `json:"isCritical"`
+	CriticalVersion      string                  `json:"criticalVersion,omitempty"`
 	MinRequiredVersion   string                  `json:"minRequiredVersion,omitempty"`
 	SHA256Checksums      map[string]string       `json:"sha256Checksums"`
 	ReleaseNotes         map[string]string       `json:"releaseNotes"`
